force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c.object-meta.xml
<CustomObject>
    <label>T_qtc_ActiveCustomer_Payment_Alloc_Detai</label>
    <nameField>
        <label>T_qtc_ActiveCustomer_Payment_Alloc_Detai</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_qtc_ActiveCustomer_Payment_Alloc_Detai</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>