force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/fields/Applied_Amount_without_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount_without_Symbol__c</fullName>
    <label>Applied Amount without Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>