force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/fields/Applied_To_Trans__c.field-meta.xml
<CustomField>
    <fullName>Applied_To_Trans__c</fullName>
    <label>Applied To Trans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>