force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/fields/Applying_Transaction_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>Applying_Transaction_Internal_Id__c</fullName>
    <label>Applying Transaction Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>