force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/fields/Invoice_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Internal_ID__c</fullName>
    <label>Invoice Internal ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>