force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/fields/OSA__c.field-meta.xml
<CustomField>
    <fullName>OSA__c</fullName>
    <label>OSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>