force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/fields/Payment_ApplicationPartial_Full__c.field-meta.xml
<CustomField>
    <fullName>Payment_ApplicationPartial_Full__c</fullName>
    <label>Payment Application(Partial / Full)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>