force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <label>Payment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>