force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/fields/T_OSAMatched__c.field-meta.xml
<CustomField>
    <fullName>T_OSAMatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T_OSAMatched</label>
    <type>Checkbox</type>
</CustomField>