force-app/main/default/objects/T_qtc_ActiveCustomer_Payment_Alloc_Detai__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Internal_ID__c</columns>
    <columns>Formula_Text__c</columns>
    <columns>Invoice_Internal_ID__c</columns>
    <columns>Applied_Amount__c</columns>
    <columns>Applied_Amount_without_Symbol__c</columns>
    <columns>Applied_To_Trans__c</columns>
    <columns>Applied_To_Link_Type__c</columns>
    <columns>Payment_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>